# brazilian-real-state-scraper

./: README.md  main.py  pyproject.toml
data/: imoveis.csv
src/scrapers/imobiliario/constantes/: atributos_imovel_xpaths.py  tipo_imovel.py
src/scrapers/imobiliario/entidades/: imovel.py
src/util/: arquivos.py  logging_util.py  scraper.py
