[tool.poetry]
name = "realstatespider"
version = "0.1.0"
description = "web crawling and data analysis tool that extracts real estate data from the web and uses dashboards and machine learning to provide insights and predictions."
authors = ["Guilherme Vieira <guilherme.vieira@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
zapimoveis-scraper = "^0.4.0"
bs4 = "^0.0.1"
requests = "^2.28.2"
selenium = "^4.8.2"
asyncio = "^3.4.3"
logging = "^0.4.9.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-cov = "^4.0.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
