[tool.poetry]
name = "real-state-spider"
version = "0.0.0"
description = "A real estate scraper/crawler for Brazilian real estate that extracts data from various real estate websites in Brazil and then store this data in a structured format (e.g CSV) for analysis or research purposes."
authors = ["José Guilherme <jguilhermemv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.28.2"
selenium = "^4.8.2"
logging = "^0.4.9.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-cov = "^4.0.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
